--- a/styles/styles.css
+++ b/styles/styles.css
@@ -808,9 +808,9 @@ body::-webkit-scrollbar-thumb {
 
 @media (width < 600px) {
   body {
-    overflow-y: hidden;
+    overflow-x: hidden;
   }
-  
+
   #global-header h1 {
     font-family: 'Josefin Sans', sans-serif;
     letter-spacing: 6px;
@@ -1005,7 +1005,7 @@ body::-webkit-scrollbar-thumb {
   #contact-section {
     display: block;
     margin-bottom: 10vh;
-    width: 100%;
+    max-width: 100%;
   }
 
   #social-section {
