--- a/styles/styles.css
+++ b/styles/styles.css
@@ -685,6 +685,22 @@ body::-webkit-scrollbar-thumb {
   text-transform: none;
 }
 
+.project-link {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: white;
+  color: black;
+  text-decoration: none;
+  border: 1px solid black;
+  border-radius: 20px;
+  transition: 0.3s;
+}
+
+.project-link:hover {
+    background-color: black;
+    color: white;
+}
+
 #contact {
   margin-inline: auto;
   background-color: #000;
