--- a/styles/styles.css
+++ b/styles/styles.css
@@ -880,6 +880,11 @@ body::-webkit-scrollbar-thumb {
     top: 3%;
     font-size: 1.5rem;
   }
+  
+  #global-header nav {
+    width: 100%;
+    overflow: hidden;
+  }
 
   #global-header nav img {
     max-width: 15%;
@@ -888,12 +893,17 @@ body::-webkit-scrollbar-thumb {
 
   #nav-links {
     display: none;
+    flex-direction: column;
+    align-items: center;
+    text-align: left;
+    margin-top: 10vh;
     /* Hide navigation links on mobile */
   }
 
   #hamburger-btn {
     display: block;
-    width: 55px;
+    width: 45px;
+    margin-right: 5px;
     /* Show hamburger button on mobile */
   }
 
