--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,12 @@
+@font-face {
+  font-family: 'Josefin Sans';
+  src: url('/fonts/JosefinSans-VariableFont_wght.ttf') format('woff2'),
+       url('/fonts/JosefinSans-Italic-VariableFont_wght.ttf') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
 * {
   padding: 0;
   margin: 0;
@@ -838,7 +847,6 @@ body::-webkit-scrollbar-thumb {
   font-weight: 400;
 }
 
-#copyright>a,
 #copyright>span {
   margin: 0 4px;
   /* Giving equal margins for both the span and the a for consistency */
