--- a/styles/styles.css
+++ b/styles/styles.css
@@ -59,7 +59,6 @@ body::-webkit-scrollbar-thumb {
 #main-content {
   opacity: 0;
   transition: opacity 0.5s ease;
-  /* Adjust the duration as per your preference */
 }
 
 #global-header {
@@ -73,12 +72,12 @@ body::-webkit-scrollbar-thumb {
 #global-header nav img {
   max-width: 5%;
   max-height: 100%;
-
 }
 
 #global-header h1 {
   font-family: 'Josefin Sans', sans-serif;
   letter-spacing: 8px;
+  font-size: 2vw;
   font-weight: 100;
   color: #fff;
   visibility: hidden;
@@ -827,20 +826,15 @@ body::-webkit-scrollbar-thumb {
 
 .footer {
   display: flex;
-  /* Change this from block to flex */
   justify-content: space-between;
-  /* This will space the child elements between the left and right extremes */
   background-color: #000;
   padding: 20px 20px;
 }
 
 #copyright {
   display: flex;
-  /* Make this a flex container to handle its children's layout */
   justify-content: space-between;
-  /* Space the child elements (span and a) between the left and right extremes */
   width: 100%;
-  /* Ensure this container spans the full width of its parent */
   font-family: 'Josefin Sans', sans-serif;
   color: #fff;
   font-size: 1.0rem;
@@ -860,8 +854,25 @@ body::-webkit-scrollbar-thumb {
 .show {
   opacity: 1;
 }
+.responsive-break {
+  display: none;
+}
 
-@media (width < 600px) {
+@media (min-width: 800px) and (max-width: 1400px) {
+  .responsive-break {
+    display: inline;
+  }
+  #global-header h1 {
+    font-size: 2vw;
+  }
+
+  #global-header nav ul li a {
+    font-size: 14px;
+  }
+}
+
+
+@media (width < 800px) {
   body {
     overflow-x: hidden;
   }
@@ -1104,8 +1115,8 @@ body::-webkit-scrollbar-thumb {
     border-radius: 2.5rem;
     position: relative;
     height: 1.5rem;
-    background: linear-gradient(330deg, #000, #000, #C08261);
-    border: 2px solid #C08261;
+    background: linear-gradient(330deg, #000, #000, #59CE8F);
+    border: 2px solid #59CE8F;
     max-width: 100%;
     text-align: center;
     font-family: 'Josefin Sans', sans-serif;
@@ -1118,7 +1129,7 @@ body::-webkit-scrollbar-thumb {
     font-weight: 300;
     text-transform: uppercase;
     word-wrap: break-word;
-
+    text-decoration: none;
   }
 
 }
