--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,11 +1,10 @@
 @font-face {
-  font-family: 'Josefin Sans';
-  src: url('/fonts/JosefinSans-VariableFont_wght.ttf') format('woff2'),
-       url('/fonts/JosefinSans-Italic-VariableFont_wght.ttf') format('woff');
+  font-family: "Josefin Sans";
+  src: url("/fonts/JosefinSans-VariableFont_wght.ttf") format("woff2"),
+    url("/fonts/JosefinSans-Italic-VariableFont_wght.ttf") format("woff");
   font-weight: normal;
   font-style: normal;
 }
-
 
 * {
   padding: 0;
@@ -62,7 +61,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 #global-header {
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: "Josefin Sans", sans-serif;
   width: 100%;
   text-align: center;
   align-items: center;
@@ -75,7 +74,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 #global-header h1 {
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: "Josefin Sans", sans-serif;
   letter-spacing: 8px;
   font-size: 2vw;
   font-weight: 100;
@@ -128,10 +127,9 @@ body::-webkit-scrollbar-thumb {
   float: left;
 }
 
-
 #global-header li a {
   display: block;
-  color: #FFF;
+  color: #fff;
   text-align: center;
   padding: 12px 12px;
   text-decoration: none;
@@ -139,7 +137,7 @@ body::-webkit-scrollbar-thumb {
 
 #global-header li:last-child a {
   color: #000;
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: "Josefin Sans", sans-serif;
   display: inline-block;
   padding: 10px 20px;
   background-color: white;
@@ -172,7 +170,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .home h2 {
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: "Josefin Sans", sans-serif;
   letter-spacing: 25px;
   color: #fff;
   font-size: 10.7vw;
@@ -209,7 +207,6 @@ body::-webkit-scrollbar-thumb {
   stroke-dasharray: 651;
   stroke-dashoffset: 651;
   animation: lin-animation 2s ease forwards 0.3s;
-
 }
 
 #loading-screen path:nth-child(4) {
@@ -222,49 +219,42 @@ body::-webkit-scrollbar-thumb {
   stroke-dasharray: 1022px;
   stroke-dashoffset: 1022px;
   animation: lin-animation 2s ease forwards 0.9s;
-
 }
 
 #loading-screen path:nth-child(6) {
   stroke-dasharray: 886px;
   stroke-dashoffset: 886px;
   animation: lin-animation 2s ease forwards 1.2s;
-
 }
 
 #loading-screen path:nth-child(7) {
   stroke-dasharray: 1027px;
   stroke-dashoffset: 1027px;
   animation: lin-animation 2s ease forwards 1.5s;
-
 }
 
 #loading-screen path:nth-child(8) {
   stroke-dasharray: 767px;
   stroke-dashoffset: 767px;
   animation: lin-animation 2s ease forwards 0.3s;
-
 }
 
 #loading-screen path:nth-child(9) {
   stroke-dasharray: 885px;
   stroke-dashoffset: 885px;
   animation: lin-animation 2s ease forwards 0.6s;
-
 }
 
 #loading-screen path:nth-child(10) {
   stroke-dasharray: 716px;
   stroke-dashoffset: 716px;
   animation: lin-animation 2s ease forwards 0.9s;
-
 }
 
 #loading-screen path:nth-child(11) {
   stroke-dasharray: 769px;
   stroke-dashoffset: 769px;
   animation: lin-animation 2s ease forwards 1.2s;
-
 }
 
 #loading-screen path:nth-child(12) {
@@ -496,7 +486,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .vertical-title {
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: "Josefin Sans", sans-serif;
   letter-spacing: 5px;
   font-size: 1.5vw;
   font-weight: 500;
@@ -506,7 +496,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .section-number {
-  font-family: 'Old Standard TT', serif;
+  font-family: "Old Standard TT", serif;
   letter-spacing: 5px;
   font-size: 4vw;
   font-weight: 500;
@@ -529,7 +519,7 @@ body::-webkit-scrollbar-thumb {
   margin-right: 20px;
 }
 
-.content-container>div {
+.content-container > div {
   transition: opacity 0.5s;
   /* Add smooth transition */
 }
@@ -543,7 +533,7 @@ body::-webkit-scrollbar-thumb {
 
 #introduction-container {
   flex-basis: 40%;
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: "Josefin Sans", sans-serif;
   color: #fff;
   margin: 20px auto;
 }
@@ -557,7 +547,7 @@ body::-webkit-scrollbar-thumb {
 
 #introduction-container h4 {
   margin: 1rem 0;
-  color: #007BFF;
+  color: #007bff;
   font-weight: 500;
 }
 
@@ -594,7 +584,7 @@ body::-webkit-scrollbar-thumb {
   min-height: 9rem;
   padding: 0.5rem;
   text-align: center;
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: "Josefin Sans", sans-serif;
   font-size: 3vw;
   font-weight: 400;
   color: #fff;
@@ -610,7 +600,7 @@ body::-webkit-scrollbar-thumb {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: "Josefin Sans", sans-serif;
   line-height: 1.6;
   font-weight: 500;
   font-size: 1rem;
@@ -619,7 +609,7 @@ body::-webkit-scrollbar-thumb {
 
 #experience-container {
   flex-basis: 35%;
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: "Josefin Sans", sans-serif;
   color: #fff;
 }
 
@@ -642,11 +632,11 @@ body::-webkit-scrollbar-thumb {
   position: relative;
   height: auto;
   min-height: 9rem;
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: "Josefin Sans", sans-serif;
   color: #fff;
   text-align: left;
-  background: linear-gradient(330deg, #000, #000, #DAB060);
-  border: 2px solid #DAB060;
+  background: linear-gradient(330deg, #000, #000, #dab060);
+  border: 2px solid #dab060;
 }
 
 #experience-box div {
@@ -661,7 +651,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 #experience-box span {
-  font-size: 1.0vw;
+  font-size: 1vw;
   display: block;
 }
 
@@ -689,7 +679,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .project-description {
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: "Josefin Sans", sans-serif;
   color: #fff;
   flex-basis: 60%;
   padding: 0.5rem;
@@ -706,7 +696,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .project-description span {
-  font-size: 1.0vw;
+  font-size: 1vw;
 }
 
 .project-description p {
@@ -730,8 +720,8 @@ body::-webkit-scrollbar-thumb {
 }
 
 .project-link:hover {
-    background-color: black;
-    color: white;
+  background-color: black;
+  color: white;
 }
 
 #contact {
@@ -758,7 +748,6 @@ body::-webkit-scrollbar-thumb {
 #contact-section {
   display: flex;
   gap: 15px;
-
 }
 
 #social-section {
@@ -796,7 +785,6 @@ body::-webkit-scrollbar-thumb {
 .social-icon a:focus {
   color: inherit;
   opacity: 0.8;
-
 }
 
 #pills-section {
@@ -807,16 +795,16 @@ body::-webkit-scrollbar-thumb {
 }
 
 .contact-pill {
-  padding: 1.0rem 1.0rem;
+  padding: 1rem 1rem;
   border-radius: 2.5rem;
   position: relative;
   height: auto;
   min-height: 2rem;
-  background: linear-gradient(330deg, #000, #000, #59CE8F);
-  border: 2px solid #59CE8F;
+  background: linear-gradient(330deg, #000, #000, #59ce8f);
+  border: 2px solid #59ce8f;
   max-width: 100%;
   text-align: center;
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: "Josefin Sans", sans-serif;
   color: #fff;
   letter-spacing: 5px;
   font-size: 1.5rem;
@@ -835,13 +823,13 @@ body::-webkit-scrollbar-thumb {
   display: flex;
   justify-content: space-between;
   width: 100%;
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: "Josefin Sans", sans-serif;
   color: #fff;
-  font-size: 1.0rem;
+  font-size: 1rem;
   font-weight: 400;
 }
 
-#copyright>span {
+#copyright > span {
   margin: 0 4px;
   /* Giving equal margins for both the span and the a for consistency */
 }
@@ -871,19 +859,20 @@ body::-webkit-scrollbar-thumb {
   }
 }
 
-
 @media (width < 800px) {
   body {
     overflow-x: hidden;
   }
 
-  #about, #projects, #contact {
+  #about,
+  #projects,
+  #contact {
     gap: 30px;
     align-items: baseline;
   }
 
   #global-header h1 {
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: "Josefin Sans", sans-serif;
     letter-spacing: 6px;
     font-weight: 100;
     color: #fff;
@@ -897,7 +886,7 @@ body::-webkit-scrollbar-thumb {
     top: 3%;
     font-size: 1.5rem;
   }
-  
+
   #global-header nav {
     width: 100%;
     overflow: hidden;
@@ -925,7 +914,7 @@ body::-webkit-scrollbar-thumb {
   }
 
   .vertical-title {
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: "Josefin Sans", sans-serif;
     letter-spacing: 5px;
     font-size: 12px;
     font-weight: 500;
@@ -946,7 +935,7 @@ body::-webkit-scrollbar-thumb {
   }
 
   #introduction-container {
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: "Josefin Sans", sans-serif;
     color: #fff;
     text-align: center;
     margin-bottom: 5vh;
@@ -960,8 +949,8 @@ body::-webkit-scrollbar-thumb {
   }
 
   #introduction-container h4 {
-    margin: .5rem 0;
-    color: #007BFF;
+    margin: 0.5rem 0;
+    color: #007bff;
     font-weight: 500;
   }
 
@@ -988,7 +977,7 @@ body::-webkit-scrollbar-thumb {
     gap: 0.5rem;
     margin-bottom: 5vh;
   }
-  
+
   .pill-box-left {
     padding: 1.3rem 1.5rem;
     border-radius: 2.5rem;
@@ -997,7 +986,7 @@ body::-webkit-scrollbar-thumb {
     max-height: 4rem;
     padding: 0.5rem;
     text-align: center;
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: "Josefin Sans", sans-serif;
     font-size: 7vw;
     font-weight: 400;
     color: #fff;
@@ -1005,7 +994,7 @@ body::-webkit-scrollbar-thumb {
     align-items: center;
     justify-content: center;
   }
-  
+
   .pill-box-right {
     border-left: 0;
     padding: 0.5rem;
@@ -1013,7 +1002,7 @@ body::-webkit-scrollbar-thumb {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: "Josefin Sans", sans-serif;
     line-height: 1.6;
     font-weight: 500;
     font-size: 1rem;
@@ -1022,7 +1011,7 @@ body::-webkit-scrollbar-thumb {
 
   #experience-container {
     flex-basis: 35%;
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: "Josefin Sans", sans-serif;
     color: #fff;
     margin-bottom: 5vh;
   }
@@ -1046,7 +1035,7 @@ body::-webkit-scrollbar-thumb {
     margin: 10px 0;
     letter-spacing: 5px;
   }
-  
+
   #experience-box span {
     font-size: 12px;
     display: block;
@@ -1058,7 +1047,7 @@ body::-webkit-scrollbar-thumb {
   }
 
   .project-description {
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: "Josefin Sans", sans-serif;
     color: #fff;
     flex-basis: 60%;
     padding: 0.5rem;
@@ -1080,7 +1069,7 @@ body::-webkit-scrollbar-thumb {
     padding-right: 0;
     line-height: 1.6;
     font-weight: 500;
-    font-size: 1.0rem;
+    font-size: 1rem;
     text-transform: none;
     text-align: left;
   }
@@ -1111,15 +1100,15 @@ body::-webkit-scrollbar-thumb {
   }
 
   .contact-pill {
-    padding: .75rem .75rem;
+    padding: 0.75rem 0.75rem;
     border-radius: 2.5rem;
     position: relative;
     height: 1.5rem;
-    background: linear-gradient(330deg, #000, #000, #59CE8F);
-    border: 2px solid #59CE8F;
+    background: linear-gradient(330deg, #000, #000, #59ce8f);
+    border: 2px solid #59ce8f;
     max-width: 100%;
     text-align: center;
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: "Josefin Sans", sans-serif;
     color: #fff;
     text-transform: uppercase;
   }
@@ -1130,6 +1119,6 @@ body::-webkit-scrollbar-thumb {
     text-transform: uppercase;
     word-wrap: break-word;
     text-decoration: none;
+    color: inherit;
   }
-
 }
