new responsive design

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -867,9 +867,48 @@ body::-webkit-scrollbar-thumb {
   #about,
   #projects,
   #contact {
-    gap: 30px;
-    align-items: baseline;
+    display: block;
+    gap: 50px;
+    align-items: center;
   }
+
+  .vertical-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    top: 0;
+    margin-bottom: 5vh;
+}
+
+.vertical-title {
+    font-family: "Josefin Sans", sans-serif;
+    letter-spacing: 5px;
+    font-size: 12px;
+    font-weight: 500;
+    color: #fff;
+    writing-mode: horizontal-tb;
+    transform: none;
+}
+
+.section-number {
+    font-family: "Old Standard TT", serif;
+    letter-spacing: 5px;
+    font-size: 4vw;
+    font-weight: 500;
+    color: #fff;
+    margin-bottom: 10px;
+}
+
+.vertical-section hr {
+    color: #fff;
+    border: none;
+    width: 100px; 
+    background-color: #fff;
+    height: 1px;  
+    margin-bottom: 10px;
+    transform: none;  
+}
 
   #global-header h1 {
     font-family: "Josefin Sans", sans-serif;
@@ -910,17 +949,6 @@ body::-webkit-scrollbar-thumb {
     display: block;
     width: 45px;
     margin-right: 5px;
-    /* Show hamburger button on mobile */
-  }
-
-  .vertical-title {
-    font-family: "Josefin Sans", sans-serif;
-    letter-spacing: 5px;
-    font-size: 12px;
-    font-weight: 500;
-    color: #fff;
-    writing-mode: vertical-lr;
-    transform: rotate(180deg);
   }
 
   .content-container {
@@ -1040,8 +1068,10 @@ body::-webkit-scrollbar-thumb {
     font-size: 12px;
     display: block;
   }
+
   .project {
-    display: block;
+    display: flex;
+    flex-direction: column-reverse;
     height: auto;
     margin-bottom: 10vh;
   }
@@ -1071,7 +1101,7 @@ body::-webkit-scrollbar-thumb {
     font-weight: 500;
     font-size: 1rem;
     text-transform: none;
-    text-align: left;
+    text-align: center;
   }
 
   .project-img-container {
